fix(security): restrict BudgetCheckController and ERP SecurityConfig (M1 security review)
- Gate actuator/Swagger behind exposeManagementEndpoints flag (C-3)
- Add @PreAuthorize to BudgetCheckController.checkBudgetAvailability (ADMIN/SUPER_ADMIN/WORKFLOW_ENGINE)
- Externalize CORS allowed-origins to werkflow.security.cors.allowed-origins config (M-8)
- Remove hardcoded default DB password; require POSTGRES_PASSWORD env var (MED-01)
- Disable stack trace and message exposure in error responses (MED-02)